# cargo-release-commit-message-issue

./: Cargo.toml
crates/whatever/: Cargo.toml
