[package]
name = "cargo-release-commit-message-issue"
version = "4.0.0"
edition = "2024"

[package.metadata.release]
pre-release-commit-message = "My Release Message: {{version}}"
consolidate-commits = false

[workspace]
members = ["crates/whatever"]

[workspace.metadata.release]
consolidate-commits = false
